name: hsbot
version: 0.0.1
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
synopsis: Program your robot AI in Haskell and try to win!
description:
    Program your robot AI in Haskell and try to win!
category: Game
author: Daniel Trstenjak
 
source-repository head
    type: git
    location: https://github.com/dan-t/hsbot
 
executable hsbot
    build-depends:
        base >=3 && <5,
        vector -any,
        Vec -any,
        GLFW-b <1.0.0,
        OpenGLRaw -any,
        Gamgine -any,
        lens -any,
        random -any,
        mtl -any
    main-is: Main.hs
    buildable: True
    include-dirs: ../Gamgine
    ghc-options: -funbox-strict-fields
 
 