name: hsbot
version: 0.0.1
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
synopsis: Program your robot AI in Haskell and try to win!
description:
    Program your robot AI in Haskell and try to win!
category: Game
author: Daniel Trstenjak
 
source-repository head
    type: git
    location: https://github.com/dan-t/hsbot
 
executable hsbot
    build-depends:
        base >=3 && <5,
        vector >=0.10.9.1 && <0.11,
        Vec >=1.0.1 && <1.1,
        GLFW-b >=1.0 && <1.5,
        OpenGLRaw >=1.4.0.0 && <1.6,
        Gamgine ==0.3.*,
        lens >=4.1.2 && <4.5,
        random >=1.0.1.1 && <1.1,
        mtl >=2.1.3.1 && <2.2
    main-is: Main.hs
    buildable: True
    include-dirs: ../Gamgine
    ghc-options: -funbox-strict-fields
 
 
